--- a/views/film2.erb
+++ b/views/film2.erb
@@ -7,17 +7,19 @@
     <link> rel='stylesheet' href='/style.css'>
     <title> </title>
 </head>
-
 <body>
-    <nav>
-        <ul>
-      
-           <li> <a href="/films">back to list</a> </li>
-         </ul>
 
-    </nav>
+   <nav>
+   <ul>
+    
+       <li> <a href="/Film list">back to list</a> </li>
+ </ul>
+
+</nav>
 
 
+
+<h1> Sinatra Cinema </h1>
 <%= yield %>
 
 </body>
